<resources>
    <string name="app_name">PersonalAccountant</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnAuth">Authorization</string>
    <string name="btnReg">Registration</string>
    <string name="btnDelAcc">Del</string>
    <string name="btnUpdAcc">Update</string>
    <string name="btnNewAcc">New Account</string>
    <string name="nameAcc">Name of Account: </string>
    <string name="amountAcc">Amount of Account: </string>
    <string name="amountStartSum">Input"\n"sum</string>
    <string name="currencyAcc">Currency of Account: </string>
    <string name="btnAddNewAcc">Add</string>
    <string name="btnNewTr">New Transaction</string>
    <string name="typeTransaction">Type of transaction: </string>
    <string name="categoryTransaction">Category:</string>
    <string name="btnNewCategoryTransaction">New Category</string>
    <string name="btnAddNewTransaction">Add new transaction</string>
    <string name="InputNewCategory">Input name for new category:</string>
    <string name="StartAmountNewAccount">0</string>
    <string name="hintPartner">Partner, not necessary</string>
    <string name="etDescription">Description, not necessary</string>

    <string-array name="currency">
        <item>UAH</item>
        <item>USD</item>
    </string-array>

    <string-array name="typeTransaction">
        <item>Expense</item>
        <item>Income</item>
        <item>Transfer</item>
    </string-array>

</resources>
